# ModelDB

./: .gitignore  CMakeLists.txt  Makefile  README.md  WHITEPAPER.md  build.bat  memcell-model-guide.html
include/: analyzer.h  bitpack.h  cell.h  chunker.h  dedup.h  delta.h  entropy.h  file_format.h  lz_compress.h  memalgo.h  memalgo_api.h  pattern_codec.h  shuffle.h  utils.h
src/: analyzer.cpp  bitpack.cpp  cell.cpp  chunker.cpp  dedup.cpp  delta.cpp  entropy.cpp  file_format.cpp  lz_compress.cpp  main.cpp  memalgo.cpp  memalgo_api.cpp  pattern_codec.cpp  shuffle.cpp  utils.cpp
tests/: test_roundtrip.cpp
